# code-research

./: CLAUDE.md  README.md
markdown-rag-poc/: .env.example  READ.md  README.md  indexer.py  main.py  notes.md  pyproject.toml  query.py
markdown-rag-poc/markdown_rag_poc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
