[project]
name = "markdown-rag-poc"
version = "0.1.0"
description = "Markdown RAG PoC using ChromaDB, OpenAI Embeddings, and Claude"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
]

[project.scripts]
markdown-rag = "main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "indexer", "query"]

[tool.uv]
dev-dependencies = []
